<resources>
    <string name="app_name">Instagram</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="text_bt_enter">Entrar</string>
    <string name="or">ou</string>
    <string name="not_have_account">Não tem uma conta? <b>Cadastre-se</b></string>
    <string name="text_login_facebook">Entrar com o Facebook</string>

    <string name="text_bt_next">Avançar</string>
    <string name="already_has_account">Já tem uma conta? <b>Faça login.</b></string>
    <string name="hint_name">Nome</string>
    <string name="hint_password_confirm">Confirmar senha</string>
    <string name="text_bt_continue">Continuar</string>
    <string name="welcome_to_instagram"><b>BEM-VINDO AO INSTAGRAM,\n%1$s</b>\nEncontre pessoas para seguir e comece a compartilhar fotos. Você pode alterar seu nome de usuário a qualquer momento.</string>
    <string name="agree_terms_policy">Ao clicar em Avançar, você concorda com nossos <b>Termos, Política de Dados e Política de Cookies.</b></string>
    <string name="photo_register_title">Adicionar foto do perfil</string>
    <string name="photo_register_subtitle">Adicione uma foto do perfil para que seus amigos saibam que é você.</string>
    <string name="jump">Pular</string>
    <string name="add_photo">Adicionar uma foto</string>
    <string name="define_photo_profile">Definir uma foto do perfil</string>
    <string name="take_picture">Tirar foto</string>
    <string name="search_gallery">Escolher na Biblioteca</string>
    <string name="home">Home</string>
    <string name="search">Pesquisar</string>
    <string name="text_bt_edit_profile">Editar perfil</string>
    <string name="posts">publicações</string>
    <string name="followers">seguidores</string>
    <string name="following">seguindo</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha deve conter 6 caracteres</string>
    <string name="invalid_name">Nome deve ter ao menos 3 caracteres</string>


    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password_not_equal">Senha e confirmar senha devem ser iguais.</string>
    <string name="save">Salvar</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="photo">Foto</string>
    <string name="gallery">Galeria</string>
    <string name="write_caption">Escreva uma descrição…</string>
    <string name="share">compartilhar</string>
    <string name="go">Avançar</string>
    <string name="unfollow">Seguindo</string>
    <string name="follow">Seguir</string>
    <string name="logout">Deseja sair?</string>
    <string name="logout_action">Sair</string>
    <string name="cancel">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">Nennhum registro encontrado</string>
</resources>