<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="36dp"
        tools:context=".login.view.LoginFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="48dp"
            android:src="@drawable/instagram_logo_black"
            app:layout_constraintBottom_toTopOf="@id/il_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_email"
            style="@style/Theme.Instagram.InputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/il_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/Theme.Instagram.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_password"
            style="@style/Theme.Instagram.InputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/bt_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_email"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/Theme.Instagram.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.weigner.instagram.util.LoadingButton
            android:id="@+id/bt_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:text="@string/text_bt_enter"
            app:layout_constraintBottom_toTopOf="@id/frame_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/tv_login_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_enter"
            app:layout_constraintVertical_chainStyle="packed">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/gray_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textColor="@color/gray_text" />
        </FrameLayout>

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toStartOf="@id/tv_login_facebook"
            app:layout_constraintTop_toTopOf="@id/tv_login_facebook" />

        <TextView
            android:id="@+id/tv_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_login_facebook"
            android:textColor="@color/blue_enabled"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_layout"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="@color/gray_dark"
            app:layout_constraintBottom_toTopOf="@id/tv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>