<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="36dp"
        tools:context=".register.RegisterNamePasswordFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_name"
            style="@style/Theme.Instagram.InputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/il_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                style="@style/Theme.Instagram.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_password"
            style="@style/Theme.Instagram.InputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/il_confirmation_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_name"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/Theme.Instagram.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_confirmation_password"
            style="@style/Theme.Instagram.InputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/bt_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_password"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirmation_password"
                style="@style/Theme.Instagram.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_confirm"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.instagram.LoadingButton
            android:id="@+id/bt_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/il_confirmation_password"
            app:layout_constraintVertical_chainStyle="packed"
            app:text="@string/text_bt_continue" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>