<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".profile.ProfileFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_insta_profile_thin"
            app:civ_border_color="@color/gray"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/gray_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insta_add_profile"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/blue_enabled"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_posts_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_followers_count"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_followers_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_following_count"
            app:layout_constraintStart_toEndOf="@id/tv_posts_count"
            app:layout_constraintTop_toTopOf="@+id/tv_posts_count" />

        <TextView
            android:id="@+id/tv_following_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_followers_count"
            app:layout_constraintTop_toTopOf="@+id/tv_followers_count" />

        <TextView
            android:id="@+id/tv_posts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_followers"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_posts_count" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_following"
            app:layout_constraintStart_toEndOf="@id/tv_posts_count"
            app:layout_constraintTop_toBottomOf="@id/tv_followers_count" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@id/tv_following_count" />

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/text_bt_edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_followers" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="3"
            android:text="@string/username"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            tools:text="teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/top_bottom_border"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio"
            app:menu="@menu/menu_profile_bottom_nav" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_tabs"
            tools:listitem="@layout/item_profile_grid" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
